[package]
name = "nxos"
version = "0.0.1"
authors = ["Mathieu Poussin <mpoussin@scaleway.com>"]
description = "Cisco NXOS helpers to run code directly on network devices"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/kedare/nxos-rs"
keywords = ["cisco", "nxos", "network"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
serde_json = "1.0"
chrono = "0.4"